# matematiikkavalmennusbot

./: .gitignore  README.md  config.toml.sample  pyproject.toml
matematiikkavalmennusbot/: main.py  rss.py
